<resources>
    <string name="app_name">寝過ごし防止アラーム</string>
    <string name="button_ok">OK</string>
    <string name="button_yes">はい</string>
    <string name="button_no">いいえ</string>
    <string name="time_setting">設定時刻</string>
    <string name="date_sunday">日</string>
    <string name="date_monday">月</string>
    <string name="date_tuesday">火</string>
    <string name="date_wednesday">水</string>
    <string name="date_thursday">木</string>
    <string name="date_friday">金</string>
    <string name="date_saturday">土</string>
    <string name="date_except_holiday">祝日を除外</string>
    <string name="date_include_holiday">祝日を含む</string>
    <string name="main_page_next_none">次回：設定されていません</string>
    <string name="main_page_next_alarm">次回：MM/dd(E) H:mm</string>
    <string name="main_alarm_delete">このアラームを削除します。よろしいですか？</string>
    <string name="error_no_day_of_week">曜日が設定されていません。</string>
    <string name="message_next_alarm">次回アラームはyyyy/MM/dd HH:mmです。</string>
    <string name="notify_detail_kii_initialize">Kii Cloudに接続できませんでした：%s</string>
    <string name="notify_detail_internal_error">プログラムの状態エラーです：%s</string>
    <string name="notify_detail_send_command">コマンドを送信できませんでした。</string>
    <string name="notify_detail_command_result">コマンドの実行結果を受信できませんでした。</string>
    <string name="notify_title_loading">リビングの明るさを確認中です。</string>
    <string name="notify_title_dark">リビングの照明を付けてください。</string>
    <string name="notify_title_notifying">寝過ごしていませんか？</string>
    <string name="notify_remain_time">残り{0}秒</string>
    <string name="nofity_button_stop">停止</string>
    <string name="status_detail_onboard">初期化中...</string>
    <string name="status_detail_send_command">状況確認コマンドの送信中...</string>
    <string name="status_detail_result">コマンドの結果確認中...</string>
    <string name="status_detail_retry">再送信待ち...</string>
    <string name="status_detail_completed">すでに起床しているようです。</string>
    <string name="notify_bar_close_success">通知不要のため終了しました。</string>
    <string name="notify_bar_stop">ユーザー操作によりアラームを停止しました。</string>
    <string name="notify_bar_alarm_timeout">ユーザー操作が行われなかったため、アラームを停止しました。</string>
</resources>
