<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/alarmsetting_background"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:layout_marginLeft="24dp">

    <TextView
        android:id="@+id/textViewHHMM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp" >

        <TextView
            android:id="@+id/textViewSunday"
            android:text="@string/date_sunday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"/>

        <TextView
            android:id="@+id/textViewMonday"
            android:text="@string/date_monday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"/>

        <TextView
            android:id="@+id/textViewTuesday"
            android:text="@string/date_tuesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"/>

        <TextView
            android:id="@+id/textViewWednesday"
            android:text="@string/date_wednesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"/>

        <TextView
            android:id="@+id/textViewThursday"
            android:text="@string/date_thursday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"/>

        <TextView
            android:id="@+id/textViewFriday"
            android:text="@string/date_friday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"/>

        <TextView
            android:id="@+id/textViewSaturday"
            android:text="@string/date_saturday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"/>

    </LinearLayout>


    <TextView
        android:id="@+id/textViewHoliday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp" />

</LinearLayout>
